# xcrape

./: .env.example  .gitignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE.md  README.md  TASKS.md  pyproject.toml
app/: db.py  main.py
app/static/: script.js  style.css
app/templates/: index.html
xcrape/: main.py  pyproject.toml
xcrape/app/: db.py  main.py  scraper.py
xcrape/app/static/: script.js  style.css
xcrape/app/templates/: index.html
xcrape/docs/: setup.md
